--- a/tsResultFunction/tsconfig.json
+++ b/tsResultFunction/tsconfig.json
@@ -10,6 +10,6 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
   },
-  "include": ["src/**/*"],
+  "include": ["app.ts"],
   "exclude": ["**/*.spec.ts"]
 }
